Vertex Buffer And Runtime Compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 enable_language(CXX)
 project(Match-Demo)
+add_subdirectory(thirdparty/glm)
 option(SPDLOG_BUILD_SHARED "Build shared library" ON)
 option(SPDLOG_BUILD_PIC "Build position independent code (-fPIC)" ON)
 add_subdirectory(thirdparty/spdlog)
@@ -45,5 +46,13 @@ option(GLFW_BUILD_DOCS "Build the GLFW documentation" OFF)
 option(GLFW_INSTALL "Generate installation target" OFF)
 option(GLFW_BUILD_X11 "Build support for X11" ON)
 add_subdirectory(thirdparty/glfw)
+find_package(Vulkan REQUIRED)
+add_subdirectory(thirdparty/VulkanMemoryAllocator)
+option(SHADERC_SKIP_INSTALL "Skip installation" ON)
+option(SHADERC_SKIP_TESTS "Skip building tests" ON)
+option(SHADERC_SKIP_EXAMPLES "Skip building examples" ON)
+option(SHADERC_SKIP_COPYRIGHT_CHECK "Skip copyright check" OFF)
+option(SHADERC_ENABLE_WERROR_COMPILE "Enable passing -Werror to compiler, if available" ON)
+add_subdirectory(thirdparty/shaderc)
 add_subdirectory(Match)
 add_subdirectory(Sandbox)
