--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,5 +54,6 @@ option(SHADERC_SKIP_EXAMPLES "Skip building examples" ON)
 option(SHADERC_SKIP_COPYRIGHT_CHECK "Skip copyright check" OFF)
 option(SHADERC_ENABLE_WERROR_COMPILE "Enable passing -Werror to compiler, if available" ON)
 add_subdirectory(thirdparty/shaderc)
+set(stb_DIR thirdparty/stb)
 add_subdirectory(Match)
-add_subdirectory(Sandbox)
+add_subdirectory(examples/Sandbox)
