--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,5 +58,6 @@ option(SHADERC_ENABLE_WERROR_COMPILE "Enable passing -Werror to compiler, if ava
 add_subdirectory(thirdparty/shaderc)
 set(stb_DIR thirdparty/stb)
 add_subdirectory(thirdparty/imgui)
+add_subdirectory(thirdparty/tinyobjloader)
 add_subdirectory(Match)
 add_subdirectory(examples)
