--- a/examples/Scene/CMakeLists.txt
+++ b/examples/Scene/CMakeLists.txt
@@ -1,7 +1,10 @@
 project(Scene)
 
-file(GLOB_RECURSE source src/*.cpp)
+file(GLOB source src/*.cpp)
 
+add_compile_options(-O3)
 add_executable(Scene ${source})
+
 target_link_libraries(Scene PRIVATE Match)
-target_link_libraries(Scene PRIVATE glm::glm)
+target_link_libraries(Scene PRIVATE glm)
+target_link_libraries(Scene PRIVATE tinyobjloader)
