Support KTX Texture

--- a/Match/CMakeLists.txt
+++ b/Match/CMakeLists.txt
@@ -11,6 +11,9 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 file(GLOB_RECURSE source CONFIGURE_DEPENDS src/Match/*.cpp)
 add_library(Match SHARED ${source})
 
+# Link KTX-Software
+target_link_libraries(Match PRIVATE ktx)
+
 # Link imgui
 target_link_libraries(Match PUBLIC ImGui)
 
