--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "thirdparty/tinyobjloader"]
 	path = thirdparty/tinyobjloader
 	url = https://github.com/tinyobjloader/tinyobjloader
+[submodule "thirdparty/KTX-Software"]
+	path = thirdparty/KTX-Software
+	url = https://github.com/KhronosGroup/KTX-Software
