Basic RayTracing Framework

--- a/examples/RayTracing/CMakeLists.txt
+++ b/examples/RayTracing/CMakeLists.txt
@@ -2,7 +2,7 @@ project(RayTracing)
 
 file(GLOB_RECURSE source src/*.cpp)
 
-add_compile_options(-O3)
+# add_compile_options(-O3)
 add_executable(RayTracing ${source})
 
 target_compile_definitions(RayTracing PRIVATE MATCH_INNER_VISIBLE)
