--- a/examples/GLTF/CMakeLists.txt
+++ b/examples/GLTF/CMakeLists.txt
@@ -9,5 +9,5 @@ target_compile_definitions(GLTF PRIVATE MATCH_INNER_VISIBLE)
 target_link_libraries(GLTF PRIVATE Match)
 target_link_libraries(GLTF PRIVATE ktx)
 if (WIN32)
-    COPYDLL(GLTF ../../..)
+    COPYDLL(GLTF ../..)
 endif()
