--- a/examples/Scene/CMakeLists.txt
+++ b/examples/Scene/CMakeLists.txt
@@ -1,8 +1,12 @@
 project(Scene)
 
 file(GLOB_RECURSE source CONFIGURE_DEPENDS src/*.cpp)
+file(GLOB_RECURSE headers CONFIGURE_DEPENDS src/*.hpp)
 
 add_compile_options(-O3)
-add_executable(Scene ${source})
+add_executable(Scene ${source} ${headers})
 
 target_link_libraries(Scene PRIVATE Match)
+if (WIN32)
+    COPYDLL(Scene)
+endif()
