--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,29 +38,43 @@ add_subdirectory(thirdparty/glm)
 option(SPDLOG_BUILD_SHARED "Build shared library" ON)
 option(SPDLOG_BUILD_PIC "Build position independent code (-fPIC)" ON)
 add_subdirectory(thirdparty/spdlog)
-option(BUILD_SHARED_LIBS "Build shared libraries" ON)
+# option(BUILD_SHARED_LIBS "Build shared libraries" ON)
+set(BUILD_SHARED_LIBS ON)
 option(GLFW_BUILD_EXAMPLES "Build the GLFW example programs" OFF)
 option(GLFW_BUILD_TESTS "Build the GLFW test programs" OFF)
 option(GLFW_BUILD_DOCS "Build the GLFW documentation" OFF)
 option(GLFW_INSTALL "Generate installation target" OFF)
-option(GLFW_BUILD_X11 "Build support for X11" ON)
-option(GLFW_BUILD_WIN32 "Build support for Win32" OFF)
-option(GLFW_BUILD_WAYLAND "Build support for Wayland" ON)
+if (WIN32)
+    option(GLFW_BUILD_X11 "Build support for X11" OFF)
+    option(GLFW_BUILD_WAYLAND "Build support for Wayland" OFF)
+    option(GLFW_BUILD_WIN32 "Build support for Win32" ON)
+elseif (UNIX)
+    option(GLFW_BUILD_X11 "Build support for X11" ON)
+    option(GLFW_BUILD_WAYLAND "Build support for Wayland" ON)
+    option(GLFW_BUILD_WIN32 "Build support for Win32" OFF)
+endif()
 add_subdirectory(thirdparty/glfw)
 find_package(Vulkan REQUIRED)
+set(BUILD_SHARED_LIBS OFF)
 add_subdirectory(thirdparty/VulkanMemoryAllocator)
+set(BUILD_SHARED_LIBS ON)
 option(SHADERC_SKIP_INSTALL "Skip installation" ON)
 option(SHADERC_SKIP_TESTS "Skip building tests" ON)
 option(SHADERC_SKIP_EXAMPLES "Skip building examples" ON)
 option(SHADERC_SKIP_COPYRIGHT_CHECK "Skip copyright check" OFF)
 option(SHADERC_ENABLE_WERROR_COMPILE "Enable passing -Werror to compiler, if available" ON)
+option(SHADERC_ENABLE_SHARED_CRT "Use the shared CRT instead of the static CRT" OFF)
+if (WIN32)
+    set(PYTHON_EXECUTABLE python)
+endif()
 add_subdirectory(thirdparty/shaderc)
 set(stb_DIR thirdparty/stb)
 add_subdirectory(thirdparty/imgui)
+set(BUILD_SHARED_LIBS OFF)
 add_subdirectory(thirdparty/tinyobjloader)
+set(BUILD_SHARED_LIBS ON)
 option( KTX_FEATURE_TOOLS "Create KTX tools" ON )
 option( KTX_FEATURE_DOC "Create KTX documentation." OFF )
-option( KTX_FEATURE_STATIC_LIBRARY "Create static libraries (shared otherwise)." SHARED )
 option( KTX_FEATURE_JNI "Create Java bindings for libktx." OFF )
 option( KTX_FEATURE_PY "Create Python source distribution." OFF )
 option( KTX_FEATURE_TESTS "Create unit tests." OFF )
@@ -69,6 +83,14 @@ option( KTX_FEATURE_KTX1 "Enable KTX 1 support." ON )
 option( KTX_FEATURE_KTX2 "Enable KTX 2 support." ON )
 option( KTX_FEATURE_VK_UPLOAD "Enable Vulkan texture upload." ON )
 option( KTX_FEATURE_GL_UPLOAD "Enable OpenGL texture upload." OFF )
+if (WIN32)
+    option( KTX_FEATURE_STATIC_LIBRARY "Create static libraries (shared otherwise)." ON )
+    if (NOT DEFINED BASH_EXECUTABLE )
+        set(BASH_EXECUTABLE "D:\\Git\\bin\\bash.exe")
+    endif()
+else()
+    option( KTX_FEATURE_STATIC_LIBRARY "Create static libraries (shared otherwise)." OFF )
+endif()
 add_subdirectory(thirdparty/KTX-Software)
 option(TINYGLTF_BUILD_LOADER_EXAMPLE "Build loader_example(load glTF and dump infos)" OFF)
 option(TINYGLTF_BUILD_GL_EXAMPLES "Build GL exampels(requires glfw, OpenGL, etc)" OFF)
@@ -76,7 +98,9 @@ option(TINYGLTF_BUILD_VALIDATOR_EXAMPLE "Build validator exampe" OFF)
 option(TINYGLTF_BUILD_BUILDER_EXAMPLE "Build glTF builder example" OFF)
 option(TINYGLTF_HEADER_ONLY "On: header-only mode. Off: create tinygltf library(No TINYGLTF_IMPLEMENTATION required in your project)" OFF)
 option(TINYGLTF_INSTALL "Install tinygltf files during install step. Usually set to OFF if you include tinygltf through add_subdirectory()" OFF)
+set(BUILD_SHARED_LIBS OFF)
 add_subdirectory(thirdparty/tinygltf)
+set(BUILD_SHARED_LIBS ON)
 
 option(MATCH_BUILD_EXAMPLES "Build Match Examples" ON)
 
