--- a/examples/RayTracing/CMakeLists.txt
+++ b/examples/RayTracing/CMakeLists.txt
@@ -8,5 +8,5 @@ add_executable(RayTracing ${source})
 target_compile_definitions(RayTracing PRIVATE MATCH_INNER_VISIBLE)
 target_link_libraries(RayTracing PRIVATE Match)
 if (WIN32)
-    COPYDLL(RayTracing)
+    COPYDLL(RayTracing ../../..)
 endif()
