--- a/examples/Sandbox/CMakeLists.txt
+++ b/examples/Sandbox/CMakeLists.txt
@@ -5,5 +5,5 @@ file(GLOB_RECURSE source src/*.cpp)
 add_executable(Sandbox ${source})
 target_link_libraries(Sandbox PRIVATE Match)
 if (WIN32)
-    COPYDLL(Sandbox)
+    COPYDLL(Sandbox ../../..)
 endif()
