Update README + Fix Bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,6 @@ add_subdirectory(thirdparty/glm)
 option(SPDLOG_BUILD_SHARED "Build shared library" ON)
 option(SPDLOG_BUILD_PIC "Build position independent code (-fPIC)" ON)
 add_subdirectory(thirdparty/spdlog)
-# option(BUILD_SHARED_LIBS "Build shared libraries" ON)
 set(BUILD_SHARED_LIBS ON)
 option(GLFW_BUILD_EXAMPLES "Build the GLFW example programs" OFF)
 option(GLFW_BUILD_TESTS "Build the GLFW test programs" OFF)
@@ -84,7 +83,7 @@ option( KTX_FEATURE_GL_UPLOAD "Enable OpenGL texture upload." OFF )
 if (WIN32)
     option( KTX_FEATURE_STATIC_LIBRARY "Create static libraries (shared otherwise)." ON )
     if (NOT DEFINED BASH_EXECUTABLE )
-        set(BASH_EXECUTABLE "D:\\Git\\bin\\bash.exe")
+        set(BASH_EXECUTABLE "bash.exe")
     endif()
 else()
     option( KTX_FEATURE_STATIC_LIBRARY "Create static libraries (shared otherwise)." OFF )
