--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "thirdparty/openvdb"]
 	path = thirdparty/openvdb
 	url = https://github.com/AcademySoftwareFoundation/openvdb
+[submodule "thirdparty/boost"]
+	path = thirdparty/boost
+	url = https://github.com/boostorg/boost
