--- a/examples/GLTF/CMakeLists.txt
+++ b/examples/GLTF/CMakeLists.txt
@@ -7,7 +7,9 @@ add_executable(GLTF ${source})
 
 target_compile_definitions(GLTF PRIVATE MATCH_INNER_VISIBLE)
 target_link_libraries(GLTF PRIVATE Match)
-target_link_libraries(GLTF PRIVATE ktx)
+if (MATCH_SUPPORT_KTX)
+    target_link_libraries(GLTF PRIVATE ktx)
+endif()
 if (WIN32)
     COPYDLL(GLTF ../..)
 endif()
