--- a/.gitmodules
+++ b/.gitmodules
@@ -10,9 +10,6 @@
 [submodule "thirdparty/imgui/imgui"]
 	path = thirdparty/imgui/imgui
 	url = https://github.com/ocornut/imgui
-[submodule "thirdparty/tinyobjloader"]
-	path = thirdparty/tinyobjloader
-	url = https://github.com/tinyobjloader/tinyobjloader
 [submodule "thirdparty/KTX-Software"]
 	path = thirdparty/KTX-Software
 	url = https://github.com/KhronosGroup/KTX-Software
@@ -28,3 +25,6 @@
 [submodule "thirdparty/glslang"]
 	path = thirdparty/glslang
 	url = https://github.com/KhronosGroup/glslang
+[submodule "thirdparty/rapidobj"]
+	path = thirdparty/rapidobj
+	url = https://github.com/guybrush77/rapidobj
